
2012-03-30  Jihoon Kim

	* Fix number doesn't insert even though NUM LOCK is locked.

2012-04-16  Carsten Haitzler (The Rasterman)

        * Add EDJE_VERSION_12 define so edc files can #ifdef compile
        right.

2012-04-20  Carsten Haitzler (The Rasterman)

        * To work through a bug in Elementary, add
        edje_object_part_text_escaped_set() that converts escapes to
        plain UTF8 if the part is TEXT.

2012-04-26 Carsten Haitzler (The Rasterman)

        1.2.0 release

2012-04-30  Jérôme Pinot

	* Add missing files in the tarballs.

2012-05-02  Cedric Bail

	* Doing less allocation and reuse Evas_Map does help.

2012-05-08  Cedric Bail

	* Add edje_watch tools to automatically rebuild edc.

2012-05-09  Cedric Bail

	* Fix bug in case of nesting edje_object_signal_emit and edje_object_signal_callback_{add,del}
	* Check that the file changed on disk when trying to reopen it.
	* Emit ['edje,change,file', 'edje'] when the file change on disk.
	* Automatically reload edje file when it change in edje_player.

2012-05-10  Cedric Bail

	* Preserve user box and table items during call of edje_object_file_set.

2012-05-12  Rajeev Ranjan (Rajeev)

	* Add edje_cc optimization to remove alpha channel flag from images
        with absolutely no alpha in them if marked as havin alpha in the
        originals

2012-05-14  Cedric Bail

	* Preserve drag informations during call of edje_object_file_set.

2012-05-15  Carsten Haitzler (The Rasterman)

        * Optimize edje_cc to be multi-threaded and compress in parallel
        * Remove O(n2) algorithms for O(1) in the parser in edje_cc
        * Add options for the new compression modes in Eet. (fastcomp
        and fastdecomp - LZ4 and LZ4HC).
        * Overall sped up edje_cc by 4x faster (if you use fastcomp)
        and about 4.5x faster with old zlib compression.

2012-05-16  Cedric Bail

	* Fix table and text when fixed point is turned on.
	* Clamp image tween to never underflow also.