@@ -10,6 +10,7 @@ Additions:
 
 Improvements:
     * Allocate once and reuse Evas_Map.
+    * Make edje_cc faster by improving the parser, mapping file in memory and using threads.
 
 Fixes:
     * Add missing files in the tarballs.
